[gd_scene load_steps=4 format=2]

[ext_resource path="res://view/AllThoughts.gd" type="Script" id=1]
[ext_resource path="res://view/CurrentThought.gd" type="Script" id=2]
[ext_resource path="res://Game.gd" type="Script" id=4]

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="CurrentThought" type="Label" parent="."]
margin_left = 172.0
margin_top = 119.0
margin_right = 212.0
margin_bottom = 133.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllThoughts" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="found_bad_thought" from="." to="AllThoughts" method="_on_Game_found_bad_thought"]
[connection signal="new_thought" from="." to="AllThoughts" method="_on_Game_new_thought"]
[connection signal="submit_good_thought" from="." to="AllThoughts" method="_on_Game_submit_good_thought"]
[connection signal="update_thought" from="." to="CurrentThought" method="_on_Game_update_thought"]
